--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,6 +9,10 @@ dialog.delete.success=Kunde erfolgreich gel\u00F6scht.
 dialog.create.success=Kunde erfolgreich angelegt.
 dialog.update.success=Kunde erfolgreich upgedated.
 
+
+validate.email.error=Email in an invalid format!
+validate.gender.error=Only M or F allowed!
+
 #Select--------------------------------------------
 #XSEL
 select.gender.male=m\u00E4nnlich
@@ -25,6 +29,7 @@ button.cancel=Abbrechen
 #XTIT
 master.title=Kunden\u00FCbersicht
 master.table.title=Kunden
+master.table.title.plurals = Customers
 #XFLD
 app.image=Bild
 app.customerid=Kundennummer
