Message Popover added

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,47 +1,53 @@
-title=Kunde
+title=Customer
 appTitle=FioriDeepDive
 appDescription=App Description
-
-#Dialogs-------------------------------------------
-#YMSW
-dialog.delete=Soll der Kunde wirklich gel\u00F6scht werden?
-dialog.delete.success=Kunde erfolgreich gel\u00F6scht.
-dialog.create.success=Kunde erfolgreich angelegt.
-dialog.update.success=Kunde erfolgreich upgedated.
-
 
 validate.email.error=Email in an invalid format!
 validate.gender.error=Only M or F allowed!
 
+#MsgPopover----------------------------------------
+#YMSG
+popover.gender.title=Wrong Gender!
+popover.email.title=Wrong Email!
+popover.delete.title=Could not delete!
+
+#Dialogs-------------------------------------------
+#YMSW
+dialog.delete=Do you want do delete this Customer?
+dialog.delete.success=Customer successfully deleted!
+dialog.delete.file.succes=File successfully deleted!
+dialog.create.success=Customer successfully created!
+dialog.update.success=Customer successfully updated!
+dialog.upload.success=File was uploaded!
+
+dialog.delete_entry=Do you want do delete this entry?
+dialog.entry_created=Entry was created!
+dialog.entry_deleted=Entry was deleted!
+dialog.error=An error occured!
+
+
 #Select--------------------------------------------
 #XSEL
-select.gender.male=m\u00E4nnlich
-select.gender.female=weiblich
+select.gender.male=male
+select.gender.female=female
 
 #Buttons-------------------------------------------
 #XBTN
-button.edit=Bearbeiten
-button.save=Speichern
-button.add=Hinzuf\u00FCgen
-button.cancel=Abbrechen
+button.edit=Edit
+button.save=Save
+button.add=Add
+button.cancel=Cancel
+button.upload=Upload
 
 #App/Master----------------------------------------
-#XTIT
-master.title=Kunden\u00FCbersicht
-master.table.title=Kunden
-master.table.title.plurals = Customers
+#XTIT: 
+master.title=Customer Overview
+master.table.title=Customer
+master.table.title.plurals=Customers
 #XFLD
-app.image=Bild
-app.customerid=Kundennummer
-app.firstname=Vorname
-app.lastname=Nachname
-app.title=Titel
-app.gender=Geschlecht
-app.email=EMail
-app.phone=Telefon
-app.website=Website
-app.delete=L\u00F6schen
+app.image=Image
+app.delete=Delete
 
 #Create---------------------------------------------
 #XTIT
-create.title=Neuer Kunde
+create.title=New Customer
